--- a/agent.ipynb
+++ b/agent.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LANGCHAIN_TRACING_V2: true\n",
-      "LANGCHAIN_PROJECT: my-basic-ai\n",
-      "Azure Endpoint: https://ai-oscararenas015531ai487101094010.openai.azure.com/\n",
-      "LangChain API Key: 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\n",
-      "Azure API Key: 28E0J...Gy69W\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -27,18 +15,7 @@
     "# Now you can access your environment variables\n",
     "azure_api_key = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
     "azure_endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
-    "langchain_api_key = os.getenv(\"LANGCHAIN_API_KEY\")\n",
-    "\n",
-    "# These are already set in your .env file, so we don't need to set them again\n",
-    "# But we can verify they're set correctly:\n",
-    "print(f\"LANGCHAIN_TRACING_V2: {os.getenv('LANGCHAIN_TRACING_V2')}\")\n",
-    "print(f\"LANGCHAIN_PROJECT: {os.getenv('LANGCHAIN_PROJECT')}\")\n",
-    "\n",
-    "# You can now use these variables in your code\n",
-    "print(f\"Azure Endpoint: {azure_endpoint}\")\n",
-    "print(f\"LangChain API Key: {langchain_api_key}\")\n",
-    "# Don't print the full API key for security reasons\n",
-    "print(f\"Azure API Key: {azure_api_key[:5]}...{azure_api_key[-5:]}\")"
+    "langchain_api_key = os.getenv(\"LANGCHAIN_API_KEY\")"
    ]
   },
   {
